--- a/finalTest/HTML/favorite.html
+++ b/finalTest/HTML/favorite.html
@@ -56,8 +56,13 @@
           <!-- 현재 파일이 아닌 여러군대서 사용할 클래스명은 -g를 붙여 전역변수라는걸 표시해두면 유지보수에 편하다. -->
           <img src="../IMG/avatar1.jpg" alt="" class="favorite_avatar g-avatar" />
           <div class="favorite_content">
-            <span class="favorite_user-id">fkfkfk9</span>
             <span class="favorite_user-info">웹 개발자의 웹개발 정보 전달</span>
+            <span class="favorite_user-id">fkfkfk9</span>
+          </div>
+        </div>
+        <div class="favorite_column">
+          <div class="favorite_icon">
+            <i class="fas fa-ellipsis-v"></i>
           </div>
         </div>
       </div>
@@ -68,7 +73,13 @@
         <div class="favorite_column">
           <img src="../IMG/avatar4.jpg" alt="" class="favorite_avatar g-avatar" />
           <div class="favorite_content">
+            <span class="favorite_user-info">올바른 키토제닉 가이드</span>
             <span class="favorite_user-id">lchf master</span>
+          </div>
+        </div>
+        <div class="favorite_column">
+          <div class="favorite_icon">
+            <i class="fas fa-ellipsis-v"></i>
           </div>
         </div>
       </div>
@@ -79,8 +90,13 @@
         <div class="favorite_column">
           <img src="../IMG/avatar2.jpg" alt="" class="favorite_avatar g-avatar" />
           <div class="favorite_content">
-            <span class="favorite_user-id">보배</span>
             <span class="favorite_user-info">올바른 강아지 훈련법</span>
+            <span class="favorite_user-id">보배</span>
+          </div>
+        </div>
+        <div class="favorite_column">
+          <div class="favorite_icon">
+            <i class="fas fa-ellipsis-v"></i>
           </div>
         </div>
       </li>
@@ -88,14 +104,17 @@
         <div class="favorite_column">
           <img src="../IMG/avatar3.jpg" alt="" class="favorite_avatar g-avatar" />
           <div class="favorite_content">
-            <span class="favorite_user-id">밤톨이</span>
             <span class="favorite_user-info">24시간 밤톨이 감시캠</span>
+            <span class="favorite_user-id">밤톨이</span>
           </div>
         </div>
         <div class="favorite_column">
           <div class="favorite_now-onair">
             <span>현재 방송중 : 간식 먹...</span>
             <i class="fas fa-broadcast-tower"></i>
+          </div>
+          <div class="favorite_icon">
+            <i class="fas fa-ellipsis-v"></i>
           </div>
         </div>
       </li>
