--- a/finalTest/HTML/pushPage.html
+++ b/finalTest/HTML/pushPage.html
@@ -64,8 +64,8 @@
         <div class="favorite_column">
           <img src="../IMG/avatar3.jpg" alt="" class="favorite_avatar g-avatar" />
           <div class="favorite_content">
-            <span class="favorite_user-id">밤톨이님이 업로드한 깁스 옆에 누원있는 밤톨이</span>
-            <span class="favorite_user-info">1일전</span>
+            <span class="favorite_user-info">밤톨이님이 업로드한 깁스 옆에 누원있는 밤톨이</span>
+            <span class="favorite_user-id">1일전</span>
           </div>
         </div>
         <div class="favorite_column">
@@ -81,8 +81,8 @@
         <div class="favorite_column">
           <img src="../IMG/avatar4.jpg" alt="" class="favorite_avatar g-avatar" />
           <div class="favorite_content">
-            <span class="favorite_user-id">lchf master님이 업로드한 아침에 마시는 녹즙 만드는법</span>
-            <span class="favorite_user-info">3일전</span>
+            <span class="favorite_user-info">lchf master님이 업로드한 아침에 마시는 녹즙 만드는법</span>
+            <span class="favorite_user-id">3일전</span>
           </div>
         </div>
         <div class="favorite_column">
