--- a/finalTest/HTML/favorite.html
+++ b/finalTest/HTML/favorite.html
@@ -54,7 +54,7 @@
       <div class="favorites_favorite favorite favorite-myInfo">
         <div class="favorite_column">
           <!-- 현재 파일이 아닌 여러군대서 사용할 클래스명은 -g를 붙여 전역변수라는걸 표시해두면 유지보수에 편하다. -->
-          <img src="../IMG/avatar1.jpg" alt="" class="favorite_avatar g-avatar" />
+          <img src="../IMG/avatar1.jpg" alt="" class="vod_avatar big-avatar" />
           <div class="favorite_content">
             <span class="favorite_user-info">웹 개발자의 웹개발 정보 전달</span>
             <span class="favorite_user-id">fkfkfk9</span>
