--- a/finalTest/HTML/index.html
+++ b/finalTest/HTML/index.html
@@ -57,45 +57,54 @@
           <img src="../IMG/thumbnail2.jpg" alt="영상 썸네일 사진" class="vod_thumbnail" />
         </div>
         <div class="vod_column">
-          <img src="../IMG/avatar1.jpg" alt="사용자 등록사진" class="vod_avatar g-avatar" />
-          <span class="vod_title">외할머니댁에 가는길에 들린 담양 죽녹원에서...</span>
-          <span class="vod_user-id">fkfkfk9</span>
-          <span class="vod_hit-count">100</span>
-          <span class="vod_date">2주일 전</span>
-        </div>
-        <div class="vod_column">
-          <i class="fas fa-ellipsis-v"></i>
-        </div>
+          <div class="vod_content">
+            <img src="../IMG/avatar1.jpg" alt="사용자 등록사진" class="vod_avatar big-avatar" />
+            <div class="content_column">
+              <span class="vod_title">외할머니댁에 가는길에 들린 담양 죽녹원에서...</span>
+              <span class="vod_user-id">fkfkfk9 | </span>
+              <span class="vod_hit-count">조회수 100 | </span>
+              <span class="vod_date">2주일 전</span>
+            </div>
+            <div class="content_column">
+              <i class="fas fa-ellipsis-v"></i>
+            </div>
+          </div>
       </li>
       <li class="vods_list_vod vod">
         <div class="vod_column">
           <img src="../IMG/thumbnail1.jpg" alt="영상 썸네일 사진" class="vod_thumbnail" />
         </div>
         <div class="vod_column">
-          <img src="../IMG/avatar2.jpg" alt="사용자 등록사진" class="vod_avatar g-avatar" />
-          <span class="vod_title">새로 구입한 차량을 인수 받은 후에 썬팅시공소에서...</span>
-          <span class="vod_user-id">보배</span>
-          <span class="vod_hit-count">500</span>
-          <span class="vod_date">1달 전</span>
-        </div>
-        <div class="vod_column">
-          <i class="fas fa-ellipsis-v"></i>
-        </div>
+          <div class="vod_content">
+            <img src="../IMG/avatar2.jpg" alt="사용자 등록사진" class="vod_avatar big-avatar" />
+            <div class="content_column">
+              <span class="vod_title">새로 구입한 차량을 인수 받은 후에 썬팅시공소에서...</span>
+              <span class="vod_user-id">보배 | </span>
+              <span class="vod_hit-count">조회수 500 | </span>
+              <span class="vod_date">1달 전</span>
+            </div>
+            <div class="content_column">
+              <i class="fas fa-ellipsis-v"></i>
+            </div>
+          </div>
       </li>
       <li class="vods_list_vod vod">
         <div class="vod_column">
           <img src="../IMG/thumbnail3.jpg" alt="영상 썸네일 사진" class="vod_thumbnail" />
         </div>
         <div class="vod_column">
-          <img src="../IMG/avatar3.jpg" alt="사용자 등록사진" class="vod_avatar g-avatar" />
-          <span class="vod_title">수술 후에 깁스하고 앉아있는데 밤톨이가...</span>
-          <span class="vod_user-id">밤톨</span>
-          <span class="vod_hit-count">7</span>
-          <span class="vod_date">2년 전</span>
-        </div>
-        <div class="vod_column">
-          <i class="fas fa-ellipsis-v"></i>
-        </div>
+          <div class="vod_content">
+            <img src="../IMG/avatar3.jpg" alt="사용자 등록사진" class="vod_avatar big-avatar" />
+            <div class="content_column">
+              <span class="vod_title">수술 후에 깁스하고 앉아있는데 밤톨이가...</span>
+              <span class="vod_user-id">밤톨 | </span>
+              <span class="vod_hit-count">조회수 7 | </span>
+              <span class="vod_date">2년 전</span>
+            </div>
+            <div class="content_column">
+              <i class="fas fa-ellipsis-v"></i>
+            </div>
+          </div>
       </li>
     </ul>
   </main>
