--- a/finalTest/HTML/myPage.html
+++ b/finalTest/HTML/myPage.html
@@ -56,11 +56,13 @@
             <img src="../IMG/thumbnail3.jpg" alt="" class="lately-vod_thumbnail" />
           </div>
           <div class="lately-vod_column">
-            <span class="vod_title">깁스 옆에 누원있는 밤톨이</span>
-            <span class="vod_user-id">밤톨이</span>
-          </div>
-          <div class="lately-vod_column">
-            <i class="fas fa-ellipsis-v"></i>
+            <div class="lately-vod_content">
+              <span class="vod_title">깁스 옆에 누원있는 밤톨이</span>
+              <span class="vod_user-id">밤톨이</span>
+            </div>
+            <div class="lately-vod_content">
+              <i class="fas fa-ellipsis-v"></i>
+            </div>
           </div>
         </li>
         <li class="lately-vod">
@@ -68,11 +70,13 @@
             <img src="../IMG/thumbnail4.jpg" alt="" class="lately-vod_thumbnail" />
           </div>
           <div class="lately-vod_column">
-            <span class="vod_title">아침에 마시는 녹즙 만드는법</span>
-            <span class="vod_user-id">lchf master</span>
-          </div>
-          <div class="lately-vod_column">
-            <i class="fas fa-ellipsis-v"></i>
+            <div class="lately-vod_content">
+              <span class="vod_title">아침에 마시는 녹즙 만드는법</span>
+              <span class="vod_user-id">lchf master</span>
+            </div>
+            <div class="lately-vod_content">
+              <i class="fas fa-ellipsis-v"></i>
+            </div>
           </div>
         </li>
       </ul>
