--- a/instagram_layout/index.html
+++ b/instagram_layout/index.html
@@ -71,7 +71,116 @@
                 </ul>
             </div>
             <div class="phone">
+                <header>
+                    <div class="header__column">
+                        <span class="header__title">
+                            Instagram
+                        </span>
+                    </div>
+                    <div class="header__column">
+                        <i class="fas fa-tv"></i>
+                        <i class="fas fa-plane"></i>
+                    </div>
+                </header>
+                <nav>
+                    <ul class="avatar_list">
+                        <li class="avatar-item">
+                            <img src="./img/avatar1.jpg" alt="avatar" class="nav-avatar">
+                            <i class="fas fa-plus-square"></i>
+                        </li>
+                        <li class="avatar-item">
+                            <img src="./img/avatar2.jpg" alt="avatar" class="nav-avatar">
+                        </li>
+                        <li class="avatar-item">
+                            <img src="./img/avatar3.jpg" alt="avatar" class="nav-avatar">
+                        </li>
+                        <li class="avatar-item">
+                            <img src="./img/avatar4.jpg" alt="avatar" class="nav-avatar">
+                        </li>
+                        <li class="avatar-item">
+                            <img src="./img/avatar5.jpg" alt="avatar" class="nav-avatar">
+                        </li>
+                    </ul>
+                </nav>
+                <main>
+                    <ul class="instaList">
+                        <li class="instaList-item">
+                            <div class="insta-item__column">
+                                <div class="column-item">
+                                    <img src="./img/avatar5.jpg" alt="avatar" class="g-avatar">
+                                    <div class="item-user-info">
+                                        <span class="user-name">
+                                            Sam Matin
+                                        </span>
+                                        <span class="reg-date">
+                                            5 min
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="column-item">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </div>
+                            </div>
+                            <div class="insta-item__column">
+                                <img src="./img/main.jpg" alt="main" class="main-img">
+                            </div>
+                            <div class="insta-item__column">
+                                <div class="column-item">
+                                    <i class="far fa-heart"></i>
+                                    <span class="main__span">2,515</span>
+                                    <i class="far fa-comment-dots"></i>
+                                    <span class="main__span">333</span>
+                                </div>
+                                <div class="column-item">
+                                    <i class="far fa-bookmark"></i>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="instaList-item">
+                            <div class="insta-item__column">
+                                <div class="column-item">
+                                    <img src="./img/avatar5.jpg" alt="avatar" class="g-avatar">
+                                    <div class="item-user-info">
+                                        <span class="user-name">
+                                            Sam Matin
+                                        </span>
+                                        <span class="reg-date">
+                                            5 min
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="column-item">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </div>
+                            </div>
+                            <div class="insta-item__column">
+                                <img src="./img/main.jpg" alt="main" class="main-img">
+                            </div>
+                            <div class="insta-item__column">
+                                <div class="column-item">
+                                    <i class="far fa-heart"></i>
+                                    <span class="main__span">2,515</span>
+                                    <i class="far fa-comment-dots"></i>
+                                    <span class="main__span">333</span>
+                                </div>
+                                <div class="column-item">
+                                    <i class="far fa-bookmark"></i>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </main>
+                <div class="search-bar">
+                    <ul class="menu-list">
+                        <li class="menu-item">
 
+                        </li>
+                        <li class="menu-item"></li>
+                        <li class="menu-item"></li>
+                        <li class="menu-item"></li>
+                        <li class="menu-item"></li>
+                    </ul>
+                </div>
             </div>
             <div class="phone">
 
