--- a/instagram_layout/index.html
+++ b/instagram_layout/index.html
@@ -79,7 +79,7 @@
                     </div>
                     <div class="header__column">
                         <i class="fas fa-tv"></i>
-                        <i class="fas fa-plane"></i>
+                        <i class="far fa-paper-plane"></i>
                     </div>
                 </header>
                 <nav>
@@ -122,7 +122,7 @@
                                 </div>
                             </div>
                             <div class="insta-item__column">
-                                <img src="./img/main.jpg" alt="main" class="main-img">
+                                <img src="./img/main.png" alt="main" class="main-img">
                             </div>
                             <div class="insta-item__column">
                                 <div class="column-item">
@@ -153,37 +153,139 @@
                                     <i class="fas fa-ellipsis-h"></i>
                                 </div>
                             </div>
-                            <div class="insta-item__column">
-                                <img src="./img/main.jpg" alt="main" class="main-img">
-                            </div>
-                            <div class="insta-item__column">
-                                <div class="column-item">
-                                    <i class="far fa-heart"></i>
-                                    <span class="main__span">2,515</span>
-                                    <i class="far fa-comment-dots"></i>
-                                    <span class="main__span">333</span>
-                                </div>
-                                <div class="column-item">
-                                    <i class="far fa-bookmark"></i>
-                                </div>
-                            </div>
                         </li>
                     </ul>
                 </main>
                 <div class="search-bar">
                     <ul class="menu-list">
                         <li class="menu-item">
-
+                            <span class="option-i">
+                                <i class="fas fa-th"></i>
+                            </span>
                         </li>
-                        <li class="menu-item"></li>
-                        <li class="menu-item"></li>
-                        <li class="menu-item"></li>
-                        <li class="menu-item"></li>
+                        <li class="menu-item">
+                            <span class="search-i">
+                                <i class="fas fa-search"></i>
+                            </span>
+                        </li>
+                        <li class="menu-item">
+                            <div class="center-i">
+                                <i class="fas fa-plus-square"></i>
+                            </div>
+                        </li>
+                        <li class="menu-item">
+                            <span class="search-i">
+                                <i class="far fa-heart"></i>
+                            </span>
+                        </li>
+                        <li class="menu-item">
+                            <span class="search-i">
+                                <i class="far fa-user"></i>
+                            </span>
+                        </li>
                     </ul>
                 </div>
             </div>
             <div class="phone">
-
+                <main>
+                    <section class="contents">
+                        <div class="insta-item__column">
+                            <div class="column-item">
+                                <i class="fas fa-arrow-left"></i>
+                                <img src="./img/avatar5.jpg" alt="avatar" class="g-avatar">
+                                <div class="item-user-info">
+                                    <span class="user-name">
+                                        Sam Matin
+                                    </span>
+                                    <span class="reg-date">
+                                        5 min
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="column-item">
+                                <i class="fas fa-ellipsis-h"></i>
+                            </div>
+                        </div>
+                        <div class="insta-item__column">
+                            <img src="./img/main.png" alt="main" class="main-img">
+                        </div>
+                        <div class="insta-item__column">
+                            <div class="column-item">
+                                <i class="far fa-heart"></i>
+                                <span class="main__span">2,515</span>
+                                <i class="far fa-comment-dots"></i>
+                                <span class="main__span">333</span>
+                            </div>
+                            <div class="column-item">
+                                <i class="far fa-bookmark"></i>
+                            </div>
+                        </div>
+                    </section>
+                    <section class="reply">
+                        <ul class="reply-list">
+                            <li class="reply-item">
+                                <img src="./img/avatar2.jpg" alt="avatar" class="g-avatar">
+                                <div class="reply__user-info">
+                                    <span class="user-name">
+                                            Angel
+                                    </span>
+                                    <span class="reg-date">
+                                        Looks so good that I can't control my self ever this
+                                    </span>
+                                    <div class="reply__user-info__i">
+                                        <i class="far fa-heart"></i>
+                                        <i class="fas fa-reply"></i>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="reply-item">
+                                <img src="./img/avatar3.jpg" alt="avatar" class="g-avatar">
+                                <div class="reply__user-info">
+                                    <span class="user-name">
+                                        Charlie
+                                    </span>
+                                    <span class="reg-date">
+                                        Waiting more from you.
+                                    </span>
+                                    <div class="reply__user-info__i">
+                                        <i class="far fa-heart"></i>
+                                        <i class="fas fa-reply"></i>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="reply-item">
+                                <img src="./img/avatar4.jpg" alt="avatar" class="g-avatar">
+                                <div class="reply__user-info">
+                                    <span class="user-name">
+                                        Angelina Martin
+                                    </span>
+                                    <span class="reg-date">
+                                        New collection is great!!
+                                    </span>
+                                    <div class="reply__user-info__i">
+                                        <i class="far fa-heart"></i>
+                                        <i class="fas fa-reply"></i>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </section>
+                </main>
+                <div class="search-bar">
+                    <div class="insert-box">
+                        <div class="box-item">
+                            <img src="./img/avatar1.jpg" alt="avatar" class="g-avatar">
+                            <span class="placeholder">
+                                Add a comment
+                            </span>
+                        </div>
+                        <div class="box-item">
+                            <div class="send-btn">
+                                <i class="far fa-paper-plane"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="rightDot">
                 <ul class="dotList">
