리플입력 input으로 변경

--- a/instagram_layout/index.html
+++ b/instagram_layout/index.html
@@ -275,9 +275,7 @@
                     <div class="insert-box">
                         <div class="box-item">
                             <img src="./img/avatar1.jpg" alt="avatar" class="g-avatar">
-                            <span class="placeholder">
-                                Add a comment
-                            </span>
+                            <input type="text" class="input__reply" placeholder="Add a comment">
                         </div>
                         <div class="box-item">
                             <div class="send-btn">
