테스트하면서 값 바꿔봄

--- a/HTML/cssPositionTest.html
+++ b/HTML/cssPositionTest.html
@@ -35,8 +35,10 @@
             /* fixed는 화면에 고정되어 스크롤이 움직여도 따라다닌다. */
             position: fixed;
             /* fixed일 경우 top, bottom, left, right 는 해당 엘리먼트를 모니터상 해당 픽셀의 위치로 고정시킨다. */
-            bottom: 100px;
-            left: 33px;
+            /*bottom: 100px;
+            left: 33px;*/
+            top: 10px;
+            right: 80px;
         }
 
         div.outBox {
